# digitaltwin

./: .dockerignore  .env.shared  .gitattributes  .gitignore  Dockerfile  Dockerfile-hf  Dockerfile-local  README.md  authors.md  cloudbuild.yaml  docker-compose.yaml  justfile  main.tf  outputs.tf  project_inventory.json  pyproject.toml  requirements.txt  service-config.yaml  supervisord.conf  variables.tf
config/: db.env
data/output_rag/: Jag Kanangi.txt
hfworkflow/: deploy.yaml
src/: GradioUI.py  RestService.py
src/chroma_data/: chroma.sqlite3
src/config/: logger.yaml  system_config.yaml
src/decorators/: AutoLog.py
src/embeddings/: AbstractEmbeddingModel.py  ChonkieSemanticEmbedding.py  ChonkieSentenceEmbedding.py  OpenAIEmbeddingModel.py
src/externalservices/: Pushover.py  Weather.py
src/model/: AbstractModel.py  ChatTwinModel.py  OpenAIModel.py  llama3.py
src/services/: DocumentService.py  RedisService.py  UIService.py  VectorDBService.py
src/utils/: FileProcessor.py  LoggerInit.py  SystemConfig.py
src/vectordb/: AbstractDB.py  AbstractDataWrapper.py  ChormaDBHttpClient.py  ChromaDB.py  ChromaDBHttpClient.py  DataWrappers.py  VectorDBFactory.py
src/vectordb/buckets/: Buckets.py
src/vo/: Config.py  Metadata.py  Models.py  MyBio.py  settings.py
tests/: conftest.py  test_document_service.py  test_file_processor.py  test_rest_ui.py  test_settings.py  test_vector_db_service.py  test_vo_models.py
