[project]
name = "chattwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie>=1.5.6",
    "chromadb>=1.5.2",
    "fastapi>=0.134.0",
    "gradio==5.16.0",
    "google-cloud-storage>=2.14.0",
    "httpx>=0.28.1",
    "instructor>=1.14.5",
    "litellm>=1.81.11",
    "openai>=2.21.0",
    "pushover>=0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.3.4",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "redis>=7.2.1",
    "ruamel.yaml>=0.18.6",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

